# llvm-ir-analysis

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: call_graph.rs  control_dep_graph.rs  control_flow_graph.rs  dominator_tree.rs  functions_by_type.rs  lib.rs
tests/: basic.rs  call.rs  loop.rs  rustpanic.rs
tests/bcfiles/: Makefile
