[package]
name = "llvm-ir-analysis"
version = "0.1.0"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Static analysis on LLVM IR"
documentation = "https://docs.rs/llvm-ir-analysis"
repository = "https://github.com/cdisselkoen/llvm-ir-analysis"
readme = "README.md"
keywords = ["llvm", "control-flow", "cfg", "dominator", "dependence"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.5.3"
llvm-ir = "0.7.3"
log = "0.4.8"
petgraph = { version = "0.5.1", default-features = false, features = ["graphmap"] }

[dev-dependencies]
env_logger = "0.7.1"
itertools = "0.9"

[features]
# Select the LLVM version to be compatible with.
# You _must_ enable exactly one of the following features.
llvm-8 = ["llvm-ir/llvm-8"]
llvm-9 = ["llvm-ir/llvm-9"]
llvm-10 = ["llvm-ir/llvm-10"]
llvm-11 = ["llvm-ir/llvm-11"]

# These features select the corresponding LLVM version, and require an exact
# match between the system LLVM version and the LLVM version chosen here. For
# more information, see the "strict-versioning" feature on `llvm-sys`.
llvm-8-strict = ["llvm-8", "llvm-ir/llvm-8-strict"]
llvm-9-strict = ["llvm-9", "llvm-ir/llvm-9-strict"]
llvm-10-strict = ["llvm-10", "llvm-ir/llvm-10-strict"]
llvm-11-strict = ["llvm-11", "llvm-ir/llvm-11-strict"]

[package.metadata.docs.rs]
# Generate docs.rs documentation with the llvm-11 feature
features = ["llvm-11"]
