[package]
name = "llvm-ir-analysis"
version = "0.3.2"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2021"
description = "Static analysis on LLVM IR"
documentation = "https://docs.rs/llvm-ir-analysis"
repository = "https://github.com/cdisselkoen/llvm-ir-analysis"
readme = "README.md"
keywords = ["llvm", "control-flow", "cfg", "dominator", "dependence"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.10"
llvm-ir = "0.11.0"
log = "0.4"
petgraph = { version = "0.6.0", default-features = false, features = ["graphmap"] }

[dev-dependencies]
env_logger = "0.11"
itertools = "0.12"

[features]
# Select the LLVM version to be compatible with.
# You _must_ enable exactly one of the following features.
llvm-9 = ["llvm-ir/llvm-9", "llvm-9-or-lower", "llvm-9-or-greater"]
llvm-10 = ["llvm-ir/llvm-10", "llvm-10-or-lower", "llvm-10-or-greater"]
llvm-11 = ["llvm-ir/llvm-11", "llvm-11-or-lower", "llvm-11-or-greater"]
llvm-12 = ["llvm-ir/llvm-12", "llvm-12-or-lower", "llvm-12-or-greater"]
llvm-13 = ["llvm-ir/llvm-13", "llvm-13-or-lower", "llvm-13-or-greater"]
llvm-14 = ["llvm-ir/llvm-14", "llvm-14-or-lower", "llvm-14-or-greater"]
llvm-15 = ["llvm-ir/llvm-15", "llvm-15-or-lower", "llvm-15-or-greater"]
llvm-16 = ["llvm-ir/llvm-16", "llvm-16-or-lower", "llvm-16-or-greater"]
llvm-17 = ["llvm-ir/llvm-17", "llvm-17-or-lower", "llvm-17-or-greater"]

# The `strict-versioning` feature requires an exact match between the system
# LLVM version and the version selected with the above features.
strict-versioning = ["llvm-ir/strict-versioning"]

prefer-dynamic = ["llvm-ir/prefer-dynamic"]

###
# For convenience, these automatically-enabled features allow us to avoid
# checking complex combinations of features all the time. They are not meant to
# be manually enabled; use the above llvm-x features instead
llvm-9-or-greater = []
llvm-10-or-greater = ["llvm-9-or-greater"]
llvm-11-or-greater = ["llvm-10-or-greater"]
llvm-12-or-greater = ["llvm-11-or-greater"]
llvm-13-or-greater = ["llvm-12-or-greater"]
llvm-14-or-greater = ["llvm-13-or-greater"]
llvm-15-or-greater = ["llvm-14-or-greater"]
llvm-16-or-greater = ["llvm-15-or-greater"]
llvm-17-or-greater = ["llvm-16-or-greater"]

llvm-9-or-lower = ["llvm-10-or-lower"]
llvm-10-or-lower = ["llvm-11-or-lower"]
llvm-11-or-lower = ["llvm-12-or-lower"]
llvm-12-or-lower = ["llvm-13-or-lower"]
llvm-13-or-lower = ["llvm-14-or-lower"]
llvm-14-or-lower = ["llvm-15-or-lower"]
llvm-15-or-lower = ["llvm-16-or-lower"]
llvm-16-or-lower = ["llvm-17-or-lower"]
llvm-17-or-lower = []
###

[package.metadata.docs.rs]
# Generate docs.rs documentation with the llvm-10 feature
features = ["llvm-10"]
